@@ -13,7 +13,7 @@
         jQuery(document).ready(pyfile_ready);
     </script>
 </head>
-<body>
+<body id='pyfile'>
 
 <div id='header'>
     <div class='content'>
@@ -47,6 +47,14 @@
             </td>
         </tr>
     </table>
+</div>
+
+<div id='footer'>
+    <div class='content'>
+        <p>
+            <a class='nav' href='index.html'>&#xab; index</a> &nbsp; &nbsp; <a class='nav' href='{{__url__}}'>coverage.py v{{__version__}}</a>
+        </p>
+    </div>
 </div>
 
 </body>
